--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -1,24 +1,15 @@
 :root {
-  --color-primary: #eb2f64;
-  --color-primary-light: #ff3366;
-  --color-primary-dark: #ba265d;
+  --color-bright-orange: hsl(31, 77%, 52%);
+  --color-dark-cyan: hsl(184, 100%, 22%);
+  --color-very-dark-cyan: hsl(179, 100%, 13%);
 
-  --color-grey-light-1: #faf9f9;
-  --color-grey-light-2: #f4f2f2;
-  --color-grey-light-3: #f0eeee;
-  --color-grey-light-4: #ccc;
+  --color-transparent-white: hsla(0, 0%, 100%, 0.75); // paragraph
+  --color-very-light-gray: hsl(0, 0%, 95%); // background, headings, buttons
 
-  --color-grey-dark-1: #333;
-  --color-grey-dark-2: #777;
-  --color-grey-dark-3: #999;
-
-  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
-  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
-
-  --line: 1px solid var(--color-grey-light-2);
+  --border-radius: 0.8rem;
 }
 
-$color-bg: var(--color-grey-light-4);
+$color-bg: var(--color-very-light-gray);
 
 * {
   margin: 0;
@@ -37,11 +28,16 @@ html {
 }
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1.4rem;
-  font-weight: 400;
-  line-height: 1.6;
-  color: var(--color-grey-dark-1);
+  font-family: 'Lexend Deca', sans-serif;
+  font-size: 1.5rem;
+  min-height: 100vh;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
   min-height: 100vh;
 }
