--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -6,7 +6,8 @@
   height: 50rem;
 
   grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-  grid-auto-flow: dense;
+  grid-template-rows: auto;
+
   border-radius: var(--border-radius);
   overflow: hidden;
 
@@ -14,6 +15,9 @@
 
   @media only screen and (max-width: 1175px) {
     grid-template-columns: minmax(30rem, 1fr);
+    width: 87%;
+    height: auto;
+    margin-top: 0;
   }
 
   &__card {
@@ -23,6 +27,8 @@
     justify-content: space-between;
 
     padding: 12.3rem 5rem 4.7rem 4.7rem;
+
+    min-height: 44.2rem;
 
     &__icon {
       position: absolute;
